# LatBolt

./: .gitignore  .vimrc  CMakeLists.txt  README.md
docs/: Doxyfile
include/: PROJECT.h  fluid.h  latbolt.h  vec.h
python/: main.py  other.py  pres.odp  viz.py
src/: fluid.cpp
tests/: main.cpp
